2005-06-13  Kazuhiko  <kazuhiko@fdiary.net>
	* plugin/00default.rb: use '@user' for a commit message if exists.
	* hiki/repos/svn.rb (ReposSvnBase::commit, ReposSvnBase::delete):
	add a second argument for a commit message.
	* hiki/repos/cvs.rb: ditto.
	* hiki/repos/default.rb (ReposDefault::default_msg): add a new
	method for the default commit message.

2005-06-12  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/edit_user.rb (saveconf_edit_user): fix a typo of the
	field name for user authentication (report by ISOBE, Kazuhiko).

2005-06-11  Kazuhiko  <kazuhiko@fdiary.net>
	* style/default/parser.rb: revise the regexp of PLUGIN not to
	allow '}}' in arguments.

2005-06-10  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/search.rb (search_form): rename from 'search'. use
	'export_plugin_methods'. add resource files.

	* hiki/plugin.rb (Plugin::load_plugin): 'export_plugin_methods'
	now works for not only a plugin but also a plugin and its resource
	files.

	* misc/plugin/attach/attach.rb: set the default value of
	'attach.form' to 'edit'.

	* hiki/command.rb (Command::cmd_view): not add a search link to
	'view_title'.

2005-06-09  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/plugin.rb (Plugin::load_file): export no methods if
	'export_plugin_methods' is called without arguments.

2005-06-09  Kouhei Yanagita <sugi@dream.big.or.jp>
	* misc/plugin/google-sitemaps.rb: add a new plugin.

2005-06-09  Kazuhiko  <kazuhiko@fdiary.net>
	* template/login.html: add a new template. input name and
	password.

	* hiki/plugin.rb (Plugin::admin?): add a new method.
	* template/edit.html: remove a password field. display a checkbox
	to freeze a page for 'admin' only.
	* plugin/00default.rb: display acceptable menues only.
	* hiki/command.rb (Command::cmd_save): use Plugin#admin?.

	* hiki/storage.rb (HikiDBBase::backup): add a new method.
	* hiki/db/flatfile.rb (HikiDB::store): call backup method first.

	* hiki/pluginutil.rb (Util::convert_value, Util::argwords): take
	'0123' as String.
